--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
       margin-top: 2rem;
       user-select: none;
     }
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#000000">
+<link rel="icon" href="icon-192.png" type="image/png">
 
     /* Ajustements mobiles */
     @media (max-width: 600px) {
