--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bl Reflex</title>
+  <title>Blokz Reflex</title>
 
   <!-- Manifest pour PWA -->
   <link rel="manifest" href="manifest.json" />
@@ -19,7 +19,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <title>dila Reflex</title>
+  <title>Blokz Reflex</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', sans-serif; }
     body { background: linear-gradient(to bottom right, #1f1f1f, #000); color: white; overflow: hidden; }
@@ -413,4 +413,4 @@
   }
 </script>
 </body>
-</html>
+      </html>
